--- a/code_tf/requirements.txt
+++ b/code_tf/requirements.txt
@@ -1,15 +1,16 @@
-tensorflow==2.17.0
-tensorflow-estimator==2.15.0
-numpy==1.26.4
+boto3==1.36.16
+botocore==1.36.16
+dicttoxml==1.7.16
+h5py==3.12.1
+keras==3.8.0
+mat73==0.65
+matplotlib==3.10.1
+numpy==2.2.4
+openpyxl==3.1.5
 pandas==2.2.3
-protobuf==4.25.3
-matplotlib==3.10.0
-tqdm
-scikit-learn
-absl-py
-gast
-grpcio
-h5py
-termcolor
-wrapt
-mat73
+scikit_learn==1.6.1
+scipy==1.15.2
+tensorflow==2.19.0
+ipykernel==6.29.5
+scikit-image
+opencv-python
