--- a/code_tf/requirements.txt
+++ b/code_tf/requirements.txt
@@ -1,16 +1,15 @@
-boto3==1.36.16
-botocore==1.36.16
-dicttoxml==1.7.16
-h5py==3.12.1
-keras==3.8.0
-mat73==0.65
-matplotlib==3.10.1
-numpy==2.2.4
-openpyxl==3.1.5
-pandas==2.2.3
-scikit_learn==1.6.1
-scipy==1.15.2
-tensorflow==2.19.0
-ipykernel==6.29.5
+boto3
+botocore
+dicttoxml
+h5py
+keras
+mat73
+matplotlib
+numpy
+openpyxl
+pandas
+scikit_learn
+scipy
+ipykernel
 scikit-image
 opencv-python
